k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bbmetrics
  namespace: bbmetrics
spec:
  selector:
    app: bbmetrics
  ports:
  - port: 80
    targetPort: 8000
